--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,16 @@
-<h1>Display your Pirate here</h1>
+<h1>Pirate Info</h1>
+<h1>Name: <%= "#{@pirate.name}" %></h1>
+<h1>Weight: <%= "#{@pirate.weight}" %></h1>
+<h1>Height: <%= "#{@pirate.height}" %></h1>
 
 
-<h2>Display your first ship here</h2>
+<h2>First Ship Info</h2>
+<h2>Name: <%= @first_ship.name %></h2>
+<h2>Type: <%= @first_ship.type %></h2>
+<h2>Booty: <%= @first_ship.booty %></h2>
 
 
-<h2>Display your second ship here</h2>
+<h2>Second Ship Info</h2>
+<h2>Name: <%= @second_ship.name %></h2>
+<h2>Type: <%= @second_ship.type %></h2>
+<h2>Booty: <%= @second_ship.booty %></h2>
